fixed layout issues with mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -283,7 +283,7 @@
             display: table;
             width: 100%;
             .hobby {
-                display: table-cell;
+                display: inline-block;
                 padding: 0 1.75em;
                 border: none;
                 text-align: center;
